#
# It seeems pyproject(python-build) is still not mature to build native modules.
# So we don't use pyton-buold at the moment.
# This file is just provided for future possible use of `python-build`.
#
[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake>=3.16", "ninja"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140

[project]
name = "tinyusdz"
version = "0.8.0rc5"
description = "Python binding of TinyUSDZ"
license = {file = "LICENSE"}
authors = [{ name = "Syoyo Fujita", email = "syoyofujtia@gmail.com"},
           { name = "Light Transport Entertainment, Inc.", email = "syoyo@lighttransport.com"}
          ]
readme = {file = "README.md", content-type = "text/markdown"}
